Fixed spacing for notifications. Added a timeout function for failed login message.

--- a/public/default.css
+++ b/public/default.css
@@ -521,6 +521,10 @@ img.center {
   font-size: 20px;
 }
 
+.no-notifications {
+  margin-left: 10px;
+  margin-top: 20px;
+}
 
 .navbar-form .form-control {
     display: inline-block;
